# Raw2ASCII

./: .gitignore  CMakeLists.txt  README.md  output.txt
.github/workflows/: ci.yml
include/: audio.hpp  color8bit.hpp  fileManager.hpp  fps.hpp  gif.hpp  image.hpp  rgb.hpp  utils.hpp  video.hpp
src/: audio.cpp  color8bit.cpp  fileManager.cpp  fps.cpp  gif.cpp  image.cpp  main.cpp  rgb.cpp  utils.cpp  video.cpp
tests/: CMakeLists.txt
tests/src/: test_eight_bits.cpp  test_rgb.cpp  test_utils.cpp
